Content + HTML/CSS update

--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,18 +1,13 @@
 <footer id="contact" class="contact">
-  <div class="wrapper --fullvh --flexbotm">
-    <h3>
-      <span>*</span><span>Let's dare</span><span>to be bold</span><span>together.</span>
-    </h3>
-  </div>
   
   <div class="wrapper --flexcenter">
     <div class="contact-info">
       <div class="contact-phrase">
-        <p><span>*</span><span>Wanna</span><span>chat?</span></p>
+        <p><span class="asterisk">*</span><span>Wanna</span><span>chat?</span></p>
       </div>
       <div class="contact-links">
         <p>
-          Well, Hot Lava! We'd love to chat too.<span>For inquiries, contact</span>
+          Well, Hot Lava! We’d love to chat too.<span>For inquiries, contact</span>
         </p>
         <p>info@<strong>hotlavaagency.com</strong></p>
         <div class="socials">
