--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="wrapper">
-    <img src="./logo.svg" alt="logo" width="90" />
+    <a href="#home" class="logo"><img src="./logo.svg" alt="logo" width="90" /></a>
   </div>
 
   <div class="mobile-nav">
