--- a/src/partials/nav.hbs
+++ b/src/partials/nav.hbs
@@ -1,11 +1,11 @@
-<nav class="menu">
+<nav class="menu" id="home">
   <div class="desktop">
     <ul class="navbar-nav">
-      <li><a class="about-link" href="#about-us">ABOUT</a></li>
+      <li><a class="about-link" >ABOUT</a></li>
       <span>*</span>
       <li><a class="our-way-link" href="#our-way">HOW WE WORK</a></li>
       <span>*</span>
-      <li><a class="work-link" href="#works">WORKS</a></li>
+      <li><a class="work-link" href="#work">WORK</a></li>
       <span>*</span>
       <li><a class="contact-link" href="#contact">CONTACT</a></li>
     </ul>
@@ -16,7 +16,7 @@
       <ul>
         <li><a class="about-link" href="#about-us">ABOUT</a></li>
         <li><a class="our-way-link" href="#our-way">HOW WE WORK</a></li>
-        <li><a class="work-link" href="#works">WORKS</a></li>
+        <li><a class="work-link" href="#works">WORK</a></li>
         <li><a class="contact-link" href="#contact">CONTACT</a></li>
       </ul>
     </div>
