--- a/src/partials/sections/about.hbs
+++ b/src/partials/sections/about.hbs
@@ -2,7 +2,7 @@
  
   <div class="wrapper"> 
     <div class="section__slide --fullvh">
-      <h3 class="section__h3"><span>*</span><span>Nice to</span><span>meet you</span></h3>         
+      <h3 class="section__h3"><span class="asterisk">*</span><span>Nice to</span><span>meet you.</span></h3>         
       <p class="section__p">
         Hot Lava is the very best of our big-brand, big-agency
         experiences. Just smaller. And more human. Our strong, supportive
