--- a/src/partials/sections/hero.hbs
+++ b/src/partials/sections/hero.hbs
@@ -1,3 +1,4 @@
+<a id="home"></a>
 <section id="hero" class="hero">
   <div class="wrapper">
     <div class="hero__title">
@@ -5,8 +6,7 @@
       <h1><span>HOT</span><span>LAVA*</span></h1>
     </div>
   </div>
-
-  <div class="brand">
+  {{!-- <div class="brand">
     <div>*</div>
-  </div>
+  </div> --}}
 </section>
