--- a/src/partials/sections/how.hbs
+++ b/src/partials/sections/how.hbs
@@ -1,15 +1,14 @@
-<section class="how how-we-work">
+<section class="how how-we-work" id="our-way">
   <div class="wrapper">
 
     <!-- Slide Intro -->
-    <div class="section__slide" id="our-way">
-      <h3 class="section__h3"><span>*</span><span>Here’s how</span><span>we roll</span></h3>
-    </div>
+    <div class="section__slide">
+      <h3 class="section__h3"><span class="asterisk">*</span><span>Here’s how</span><span>we roll.</span></h3>
+    </div> 
 
     <!-- Slide 1 -->
     <div class="section__slide">
-      <h3 class="section__h3">
-        <sub>01</sub>
+      <h3 class="section__h3"> 
         <span>Serious</span><span>strategery</span>
       </h3>
       <p class="section__p">
@@ -21,12 +20,11 @@
 
     <!-- Slide 2 -->
     <div class="section__slide">
-      <h3 class="section__h3">
-        <sub>02</sub>
+      <h3 class="section__h3"> 
         <span>Hot hot</span><span>hot ideas</span>
       </h3>
       <p class="section__p">
-        Distinct and compelling creative – that's all we deliver. Budgets
+        Distinct and compelling creative – that’s all we deliver. Budgets
         are tighter and attention spans are shorter, so our work works
         harder. Hot Lava is our commitment to simply smart and
         blow-your-mind creative.
@@ -35,8 +33,7 @@
 
     <!-- Slide 3 -->
     <div class="section__slide">
-      <h3 class="section__h3">
-        <sub>03</sub>
+      <h3 class="section__h3"> 
         <span>Pressure-cooked</span><span>production</span>
       </h3>
       <p class="section__p">
