--- a/src/partials/sections/intro.hbs
+++ b/src/partials/sections/intro.hbs
@@ -3,19 +3,19 @@
 
     <div class="section__slide">
       <h3 class="section__h3">
-        <span>*</span><span>This is our word </span><span>for epiphany.</span><span>We had one and</span>
+        <span class="asterisk">*</span><span>This is our word </span><span>for epiphany.</span><span>We had one and</span>
         <span>that&#8217;s why we&#8217;re here…</span>
       </h3>
     </div>
 
     <div class="section__slide">
       <h3 class="section__h3">
-        <span>*</span><span>There&#8217;s a</span><span>shortcut to</span><span>greatness</span>
+        <span>There&#8217;s a</span><span>shortcut to</span><span>greatness.</span>
       </h3>
       <p class="section__p">
-        <span><strong>So we&#8217;ll give it to you straight:</strong></span>we give our clients direct access to our
+        <span><strong>So we&#8217;ll give it to you straight:</strong> </span>we give our clients direct access to our
         award-winning creators and doers. <br /><br />
-        <span><strong>No layers,</strong></span>just creatives who excel at handling complexity.
+        <span><strong>No layers,</strong> </span>just creatives who excel at handling complexity.
       </p>
     </div>
   </div>
