--- a/src/partials/sections/work.hbs
+++ b/src/partials/sections/work.hbs
@@ -1,58 +1,68 @@
-<section id="works" class="our-work-wrapper">
-  <div class="section-title">
-    <p>THE WORK</p>
-  </div>
+<section id="work" class="work our-work-wrapper">
 
-  <div class="projects-section">
-    <div class="work-container">
-      <div class="work-item work-item-mei second-item">
+  <div class="wrapper --fullvh --flexbotm">
+    <h3 class="section__h3"><span class="asterisk">*</span><span>See what </span> <span>we do.</span></h3>
+  </div>  
+
+  <div class="work__list">
+
+    <div class="work__container">
+      <div class="work__item" data-slide="meijer">
         <div class="name">
           <p>*Meijer</p>
         </div>
+        <img src="./meijer/ice-cream.jpg" alt="Meijer">
       </div>
     </div>
 
-    <div class="work-container">
-      <div class="work-item work-item-fred first-item">
+    <div class="work__container">
+      <div class="work__item" data-slide="frederiks">
         <div class="name">
-          <p>*Fredericks's</p>
+          <p>*Frederik’s</p>
         </div>
+        <img src="./frederiks/pasta.jpg" alt="Frederik’s">
       </div>
     </div>
 
-    <div class="work-container">
-      <div class="work-item work-item-wig fifth-item">
+    <div class="work__container">
+      <div class="work__item" data-slide="dole-wiggles">
         <div class="name">
           <p>*Dole Wiggles</p>
         </div>
+        <img src="./dole/wiggles/dance.jpg" alt="Dole Wiggles">
       </div>
     </div>
 
-    <div class="work-container">
-      <div class="work-item work-item-thyme third-item">
+    <div class="work__container">
+      <div class="work__item" data-slide="fresh-thyme">
         <div class="name">
           <p>*Fresh Thyme</p>
         </div>
+        <img src="./fresh-thyme/get-real-steak.jpg" alt="Fresh Thyme">
       </div>
     </div>
 
-    <div class="work-container">
-      <div class="work-item work-item-brand fourth-item">
+    <div class="work__container">
+      <div class="work__item" data-slide="buybuybaby">
         <div class="name">
-          <p>*ByeByeBaby</p>
+          <p>*buybuyBABY</p>
         </div>
+        <img src="./buybuybaby/manifesto.jpg" alt="buybuyBABY">
       </div>
     </div>
 
-    <div class="work-container">
-      <div class="work-item work-item-wig sixth-item">
+    <div class="work__container">
+      <div class="work__item" data-slide="dole-juice">
         <div class="name">
-          <p>*Dole Wiggles</p>
+          <p>*Dole Juice</p>
         </div>
+        <img src="./dole/juice/rebecca.jpg" alt="Dole Juice">
       </div>
     </div>
+    
   </div>
 
+  <!-- Fredericks's -->
   <div class="swiper-container modal first-modal hidden">
     <swiper-container class="swiper-wrapper">
       <swiper-slide class="swiper-slide">
@@ -259,6 +269,7 @@
     </swiper-container>
   </div>
 
+  <!-- Dole Wiggles -->
   <div class="swiper-container modal third-modal hidden">
     <swiper-container class="swiper-wrapper">
       <swiper-slide class="swiper-slide">
