--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -10,7 +10,11 @@ $color-grey: #93A0AA;
 
 $pad-site: 5vw;
 
+$landscape: 480px;
+$tablet-l: 1024px;
+$change-layout: 1024px;
+
 :root {
     --font-main: "komet", sans-serif;
-    --wrapper: 1500px;
+    --wrapper: 1800px;
 }
