--- a/src/partials/head.hbs
+++ b/src/partials/head.hbs
@@ -4,5 +4,5 @@
   <link rel="stylesheet" href="https://use.typekit.net/fqq8lsn.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>HOT LAVA</title>
+  <title>Hot Lava* – Full service advertising agency. *Non-toxic. </title>
 </head>
