--- a/src/scss/_copyright.scss
+++ b/src/scss/_copyright.scss
@@ -4,7 +4,7 @@
   right: 0;
   bottom: 0;
   width: 100%;
-  margin: 5vh 0 3vh 0;
+  margin: 0 0 3vh 0;
   z-index: 1000;
 
   .wrapper {
@@ -32,9 +32,6 @@
     }
   }
 
-  @media (max-width: 580px) {
-    margin: 5vh 8vw 5vw 8vw;
-  }
 
   .line {
     height: 1px;
