--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,5 +1,6 @@
 .contact {
   position: relative;
+  overflow: hidden;
 
   h3,
   p {
@@ -122,8 +123,8 @@
 
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-end;
+    justify-content: flex-end;
 
     >div {
       font-size: clamp(400px, 66vw, 600px);
@@ -131,7 +132,10 @@
       line-height: .8;
       color: $color-orange;
       text-wrap: nowrap;
+      white-space: nowrap;
+
       transform: translateY(25%);
+      pointer-events: none;
     }
   }
 }
