--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,13 +1,16 @@
 .main {
   background-color: $color-orange;
 
-  h1, h3 {
+  h1,
+  h3 {
+    position: relative;
+    margin: 0;
+
     font-family: "komet", sans-serif;
     font-weight: 900;
     font-style: normal;
     font-size: clamp(50px, 7vw, 110px);
     line-height: 1.1;
-    margin: 0;
   }
 
   a {
@@ -17,12 +20,64 @@
   }
 }
 
-h3 { 
-  span {
-    display: block;
-    
-    &:nth-child(1) { 
-      line-height: 0.85;
-    }
+.wrapper {
+  position: relative;
+  width: min(90%, var(--wrapper));
+  margin: 0 auto;
+}
+
+.section__slide {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+
+  width: 95%;
+  padding: 10vh 0;
+
+  @media (max-width: 980px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
   }
+}
+
+.section__p {
+  max-width: 480px;
+  font-size: clamp(21px, 2.1vw, 25px);
+  line-height: 1.45;
+  letter-spacing: -0.01em;
+  margin: 1.5rem 0 0 0;
+
+  small {
+    display: block;
+    margin-top: 1rem;
+
+    font-size: 19px;
+    opacity: .8;
+    letter-spacing: -0.015em;
+  }
+}
+
+.asterisk {
+  display: block;
+  position: absolute;
+  transform: translate(-120%, 15%);
+}
+
+.--fullvh {
+  height: 100vh;
+}
+
+.--flexbotm {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+.--flexcenter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  // align-items: flex-end;
 }
