--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,9 @@
 @import "./scss/vars";
 @import "./scss/html";
 
+@import "./scss/main";
 @import "./scss/lenis";
 @import "./scss/cursor";
-@import "./scss/main";
 @import "./scss/menu";
 @import "./scss/copyright";
 @import "./scss/header";
@@ -13,65 +13,7 @@
 @import "./scss/about";
 @import "./scss/about-team";
 @import "./scss/how";
-@import "./scss/works";
+@import "./scss/work";
 
 @import "./scss/footer";
 @import "./scss/slogan";
-
-
-.wrapper {
-  position: relative;
-  width: min(90%, var(--wrapper));
-  margin: 0 auto;
-}
-
-
-.section__slide {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: end;
-
-  width: 95%;
-  padding: 10vh 0;
-
-  @media (max-width: 980px) {
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-  }
-}
-
-.section__p {
-  max-width: 480px;
-  font-size: clamp(21px, 2.1vw, 25px);
-  line-height: 1.45;
-  letter-spacing: -0.01em;
-  margin: 1.5rem 0 0 0;
-
-  small {
-    display: block;
-    margin-top: 1rem;
-
-    font-size: 19px;
-    opacity: .8;
-    letter-spacing: -0.015em;
-  }
-}
-
-.--fullvh {
-  height: 100vh;
-}
-
-.--flexbotm {
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-}
-
-.--flexcenter {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  // align-items: flex-end;
-}
