fix: feedback changes copy, space intro, img rm, brand footer

--- a/src/partials/copyright.hbs
+++ b/src/partials/copyright.hbs
@@ -4,8 +4,8 @@
     <p class="desktop">©2023. HOT LAVA* - ALL RIGHTS RESERVED</p>
     <p class="mobile">©2023 - HOT LAVA*</p>
   </div>
-  <div class="slogan">
+  {{!-- <div class="slogan">
     <p>*You’re going to like it here</p>
-  </div>
+  </div> --}}
   </div>
 </section>
