--- a/src/partials/sections/hero.hbs
+++ b/src/partials/sections/hero.hbs
@@ -6,6 +6,9 @@
       <h1><span>HOT</span><span>LAVA*</span></h1>
     </div>
   </div>
+  <div class="slogan">
+    <p>*You’re going to like it here</p>
+  </div>
   {{!-- <div class="brand">
     <div>*</div>
   </div> --}}
