--- a/src/partials/works/meijer.hbs
+++ b/src/partials/works/meijer.hbs
@@ -52,11 +52,11 @@
       </div>
     </swiper-slide>
 
-    <swiper-slide>
+    {{!-- <swiper-slide>
       <div class="card">
         <img src="./meijer/prints/01-msg-cover.jpg" alt="Meijer" />
       </div>
-    </swiper-slide>
+    </swiper-slide> --}}
 
     <swiper-slide class="slide-img">
       <div class="card">
