--- a/src/partials/sections/hero.hbs
+++ b/src/partials/sections/hero.hbs
@@ -1,12 +1,12 @@
 <a id="home"></a>
 <section id="hero" class="hero">
 
-  <iframe
-    src="https://player.vimeo.com/video/891427991?background=1"
-    width="100%"
-    height="100%"
-    allowfullscreen
-  ></iframe>
+  <video autoplay muted loop>   
+    <source
+      src="https://player.vimeo.com/progressive_redirect/playback/891427991/rendition/1080p/file.mp4?loc=external&signature=e1d86782ac8f004bf366b7f2d731d923f65c43896ce0175bd341b5d6144fbee5"
+      type="video/mp4" 
+    />
+  </video>
   
   <div class="wrapper">
     <div class="hero__title">
