feat: random slogan on page load

--- a/src/partials/sections/intro.hbs
+++ b/src/partials/sections/intro.hbs
@@ -2,7 +2,7 @@
   <div class="wrapper">
 
     <div class="section__slide">
-      <h3 class="section__h3">
+      <h3 class="section__h3 title-intro">
         <span class="asterisk">*</span><span>This is our word </span><span>for epiphany.</span><span>We had one and</span>
         <span>that&#8217;s why we&#8217;re here…</span>
       </h3>
