--- a/src/partials/sections/intro.hbs
+++ b/src/partials/sections/intro.hbs
@@ -2,17 +2,17 @@
   <div class="wrapper">
 
     <div class="section__slide">
-      <h3 class="section__h3 title-intro">
+      <h3 class="section__h3 title-intro" data-splitting data-effect1>
         <span class="asterisk">*</span><span>This is our word </span><span>for epiphany.</span><span>We had one and</span>
         <span>that&#8217;s why we&#8217;re here…</span>
       </h3>
     </div>
 
     <div class="section__slide">
-      <h3 class="section__h3">
+      <h3 class="section__h3 title-second" data-splitting data-effect2>
         <span>There&#8217;s a</span><span>shortcut to</span><span>greatness.</span>
       </h3>
-      <p class="section__p">
+      <p class="section__p paragraph-intro" data-splitting data-effect3>
         <span><strong>So we&#8217;ll give it to you straight:</strong> </span>we give our clients direct access to our
         award-winning creators and doers. <br /><br />
         <span><strong>No layers,</strong> </span>just creatives who excel at handling complexity.
