fix: text animation char fade in

--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -4,12 +4,16 @@
     <div class="contact__info">
       
       <div class="contact__phrase">
-        <p><span class="asterisk">*</span><span>Wanna</span><span>chat?</span></p>
+        <p class="contact-title" data-splitting data-effect14>
+          <span class="asterisk">*</span>Wanna</br >chat?
+        </p>
       </div>
 
       <div class="contact__links">
-        <p>Well, Hot Lava! We’d love to chat too.<span>For inquiries, contact</span></p>
-        <p>
+        <p class="section__p">
+          Well, Hot Lava! We’d love to chat too.</br >For inquiries, contact
+        </p>
+        <p class="section__p" data-splitting data-effect16>
           <a href="mailto:info@hotlavaagency.com" target="_blank" rel="noopener noreferrer">info@<strong>hotlavaagency.com</strong></a>
         </p>
         
