--- a/src/partials/sections/work.hbs
+++ b/src/partials/sections/work.hbs
@@ -2,7 +2,9 @@
 
   <div class="wrapper --flexbotm">
     <div class="section__slide">
-      <h3 class="section__h3"><span class="asterisk">*</span><span>See what </span> <span>we do.</span></h3>
+      <h3 class="section__h3" data-splitting data-effect13>
+        <span class="asterisk">*</span>See what </br > we do.
+      </h3>
     </div>
   </div>  
 
