feat: text animation title copy team

--- a/src/partials/copyright.hbs
+++ b/src/partials/copyright.hbs
@@ -1,11 +1,11 @@
 <section class="copyright">
   <div class="wrapper">
-    <div class="copyright__text">
-    <p class="desktop">©2023. HOT LAVA* - ALL RIGHTS RESERVED</p>
-    <p class="mobile">©2023 - HOT LAVA*</p>
-  </div>
-  {{!-- <div class="slogan">
-    <p>*You’re going to like it here</p>
-  </div> --}}
+    <div class="copyright__text" data-splitting data-effect18>
+      <p class="desktop">©2023. HOT LAVA* - ALL RIGHTS RESERVED</p>
+      <p class="mobile">©2023 - HOT LAVA*</p>
+    </div>
+    {{!-- <div class="slogan">
+      <p>*You’re going to like it here</p>
+    </div> --}}
   </div>
 </section>
