--- a/src/partials/sections/about.hbs
+++ b/src/partials/sections/about.hbs
@@ -19,7 +19,7 @@
 
     {{!-- Kristi --}}
     <div class="team__card team__card--1">
-      <div class="team__bio"> 
+      <div class="team__bio" data-splitting data-effect19> 
         <h3>Kristi</h3>  
         <p>
           Kristi has 15+ years experience in writing, public relations,
@@ -32,7 +32,7 @@
     
     {{!-- Phil --}}
     <div class="team__card team__card--2">
-      <div class="team__bio"> 
+      <div class="team__bio" data-splitting data-effect20> 
         <h3>Phil</h3>  
         <p>
           Phil&#8217;s thoughtful and boundary-pushing approach has
