--- a/src/partials/sections/hero.hbs
+++ b/src/partials/sections/hero.hbs
@@ -1,12 +1,10 @@
 <a id="home"></a>
 <section id="hero" class="hero">
 
-  
-  
   <div class="wrapper">
-    <div class="hero__title">
+    <div class="hero__title" data-splitting data-effect17>
       <small>Welcome to</small>
-      <h1><span>HOT</span><span>LAVA*</span></h1>
+      <h1>HOT</br >LAVA*</h1>
     </div>
     <video autoplay muted loop>   
     <source
