feat: function to set video source

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -25,7 +25,8 @@
       left: -80vw;
     }
     @media (max-width: 480px) {
-      left: -170vw;
+      left: -90vw;
+      height: 100vh;
     }
   }
 
