feat: change intro content

--- a/src/partials/sections/intro.hbs
+++ b/src/partials/sections/intro.hbs
@@ -16,8 +16,8 @@
         There&#8217;s a<br />shortcut to<br />greatness.
       </h3>
       <p class="section__p paragraph-intro">
-        <span><strong>So we&#8217;ll give it to you straight:</strong> </span>we give our clients direct access to our
-        award-winning creators and doers. <br /><br />
+        <span><strong>So we&#8217;ll give it to you straight:</strong> </span>our full-service ad agency gives clients direct 
+        access to award-winning creators and doers. <br /><br />
         <span><strong>No layers,</strong> </span>just creatives who excel at handling complexity.
       </p>
     </div>
