fix: changes in styles and bullet pagination added

--- a/src/partials/works/buybuybaby.hbs
+++ b/src/partials/works/buybuybaby.hbs
@@ -1,6 +1,6 @@
 <div class="work__slider" data-client="buybuybaby" hidden>
   <swiper-container class="work__swiper" free-mode="false" centered-slides="true" slides-per-view="auto"
-    mousewheel="true" keyboard="true" space-between="30">
+    mousewheel="true" keyboard="true" space-between="30" pagination-dynamic-bullets="true">
     <swiper-slide>
       <div class="card">
         <video controls poster="./buybuybaby/manifesto.jpg">
