--- a/src/partials/works/meijer.hbs
+++ b/src/partials/works/meijer.hbs
@@ -1,10 +1,10 @@
 <div class="work__slider" data-client="meijer" hidden>
   <swiper-container class="work__swiper" free-mode="false" centered-slides="true" slides-per-view="auto"
-    mousewheel="true" keyboard="true" space-between="30">
+    mousewheel="true" keyboard="true" space-between="30" pagination-dynamic-bullets="true">
 
     <swiper-slide>
       <div class="card">
-        <video controls>
+        <video controls poster="./meijer/ice-cream.jpg">
           <source
             src="https://player.vimeo.com/progressive_redirect/playback/891428371/rendition/1080p/file.mp4?loc=external&signature=3bd1e9886da60dfa4e7319e89f33d19d34c091c36083ec82caa55e2d2ce13601"
             type="video/mp4" />
