--- a/src/partials/works/fresh-thyme.hbs
+++ b/src/partials/works/fresh-thyme.hbs
@@ -1,6 +1,6 @@
 <div class="work__slider" data-client="fresh-thyme" hidden>
   <swiper-container class="work__swiper" free-mode="false" centered-slides="true" slides-per-view="auto"
-    mousewheel="true" keyboard="true" space-between="30">
+    mousewheel="true" keyboard="true" space-between="30" pagination-dynamic-bullets="true">
     <swiper-slide>
       <div class="card">
         <video controls poster="./fresh-thyme/get-real-steak.jpg">
