--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0%;
   left: 0;
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
   z-index: 9990;
   background-color: $color-darkBlue;
