CSS fonts buttons menu

--- a/src/partials/copyright.hbs
+++ b/src/partials/copyright.hbs
@@ -2,10 +2,10 @@
   <div class="wrapper">
     <div class="copyright__text">
       <p class="desktop">©2023. HOT LAVA* - ALL RIGHTS RESERVED</p>
-      <p class="mobile">©2023 - HOT LAVA*</p>
+      <p class="mobile">©HOT LAVA*</p>
     </div>
-    {{!-- <div class="slogan">
+    {{! <div class="slogan">
       <p>*You’re going to like it here</p>
-    </div> --}}
+    </div> }}
   </div>
 </section>
