--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -5,13 +5,13 @@
       
       <div class="contact__phrase">
         <p class="contact-title">
-          <span class="asterisk">*</span>Wanna</br >chat?
+          <span class="asterisk">*</span>Wanna </br >chat?
         </p>
       </div>
 
       <div class="contact__links">
         <p class="section__p">
-          Well, Hot Lava! We’d love to chat too.</br >For inquiries, contact
+          Well, Hot Lava! We’d love to chat too. For inquiries, contact
         </p>
         <p class="section__p">
           <a href="mailto:info@hotlavaagency.com" target="_blank" rel="noopener noreferrer">info@<strong>hotlavaagency.com</strong></a>
