--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,15 +1,33 @@
 <header class="header">
   <div class="wrapper">
-    <a href="#home" class="logo"><img src="./logo.svg" alt="logo" width="90" /></a>
+    <a href="#home" class="logo"><img
+        src="./logo.svg"
+        alt="logo"
+        width="90"
+      /></a>
   </div>
 
   <div class="burger">
-    <button>
-      <svg width="74" height="75" viewBox="0 0 74 75" fill="none">
-        <circle cx="37" cy="37.22" r="36.5" fill="white" stroke="white" />
-        <path d="M26.7188 28.9976H46.7188" stroke="#303244" stroke-width="2" stroke-linecap="round" />
-        <path d="M26.7188 36.9976H46.7188" stroke="#303244" stroke-width="2" stroke-linecap="round" />
-        <path d="M26.7188 44.9976L36.7188 44.9976" stroke="#303244" stroke-width="2" stroke-linecap="round" />
+    <button class="button">
+      <svg width="74" height="74" viewBox="0 0 74 74" fill="none">
+        <path
+          d="M26.7188 28.9976H46.7188"
+          stroke="#303244"
+          stroke-width="2"
+          stroke-linecap="round"
+        />
+        <path
+          d="M26.7188 36.9976H46.7188"
+          stroke="#303244"
+          stroke-width="2"
+          stroke-linecap="round"
+        />
+        <path
+          d="M26.7188 44.9976L36.7188 44.9976"
+          stroke="#303244"
+          stroke-width="2"
+          stroke-linecap="round"
+        />
       </svg>
     </button>
   </div>
