--- a/src/partials/nav.hbs
+++ b/src/partials/nav.hbs
@@ -13,9 +13,16 @@
 
   <div class="mobile hidden">
     <div class="close">
-      <button>
-        <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px">
-          <path d="M 4.9902344 3.9902344 A 1.0001 1.0001 0 0 0 4.2929688 5.7070312 L 10.585938 12 L 4.2929688 18.292969 A 1.0001 1.0001 0 1 0 5.7070312 19.707031 L 12 13.414062 L 18.292969 19.707031 A 1.0001 1.0001 0 1 0 19.707031 18.292969 L 13.414062 12 L 19.707031 5.7070312 A 1.0001 1.0001 0 0 0 18.980469 3.9902344 A 1.0001 1.0001 0 0 0 18.292969 4.2929688 L 12 10.585938 L 5.7070312 4.2929688 A 1.0001 1.0001 0 0 0 4.9902344 3.9902344 z"/>
+      <button class="button">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          width="24px"
+          height="24px"
+        >
+          <path
+            d="M 4.9902344 3.9902344 A 1.0001 1.0001 0 0 0 4.2929688 5.7070312 L 10.585938 12 L 4.2929688 18.292969 A 1.0001 1.0001 0 1 0 5.7070312 19.707031 L 12 13.414062 L 18.292969 19.707031 A 1.0001 1.0001 0 1 0 19.707031 18.292969 L 13.414062 12 L 19.707031 5.7070312 A 1.0001 1.0001 0 0 0 18.980469 3.9902344 A 1.0001 1.0001 0 0 0 18.292969 4.2929688 L 12 10.585938 L 5.7070312 4.2929688 A 1.0001 1.0001 0 0 0 4.9902344 3.9902344 z"
+          />
         </svg>
       </button>
     </div>
@@ -31,7 +38,7 @@
       <p>Well, Hot Lava! We'd love to chat too. For inquiries, contact</p>
       <p>info@hotlavaagency.com</p>
     </div>
-    {{!-- <div class="socials">          
+    {{! <div class="socials">          
       <a href="https://facebook.com/hotlavaagency" target="_blank">
         <svg width="16" height="26" viewBox="0 0 16 26" fill="none">
           <path
@@ -59,6 +66,6 @@
             fill="#EE512F" />
         </svg>
       </a> 
-    </div>  --}}
+    </div>  }}
   </div>
 </nav>
