--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -17,8 +17,14 @@
   align-items: flex-start;
   justify-content: space-between;
 
+  gap: 10vh;
+
+  margin: 2.5vh 0 0 0;
+
   @media (min-width:$change-layout) {
     flex-direction: row;
+    gap: 0;
+    margin: 0;
   }
 }
 
@@ -29,9 +35,17 @@
   width: 100vw;
   //height: clamp(435px, 45vh, 500px);
 
+  width: 100vw;
+  padding-bottom: 20vw;
+
+  @media (min-width:$landscape) {
+    padding-bottom: 10vw;
+  }
+
   @media (min-width:$change-layout) {
     width: 1200px;
     height: auto;
+    padding-bottom: 0;
 
     &:first-child {
       margin-left: 5vw;
@@ -55,24 +69,14 @@
       // width: clamp(900px, 75vw, 1080px);
       width: 90%;
       max-width: 1000px;
-      
+
       border-radius: 100vh;
       aspect-ratio: 3/2;
-    }
-    @media (max-width:$tablet-l) {
-      margin-top: 10vh;
     }
 
   }
 
   img {
-    // width: 100%;
-    // mix-blend-mode: multiply;
-    // opacity: 0.85;
-    // z-index: 1;
-    // object-fit: cover;
-    // overflow: hidden;
-    // aspect-ratio: 4/3;
     display: block;
     width: 100%;
     height: 100%;
@@ -82,28 +86,22 @@
 
     @media (min-width:$change-layout) {
       border-radius: 100vh;
-      // width: clamp(900px, 75vw, 1080px);
-      // aspect-ratio: 3/2;
     }
   }
 }
 
 .team__bio {
   position: absolute;
-  top: 45%;
-  left: 10%;
+  bottom: 0;
+  left: 8%;
   width: fit-content;
   height: fit-content;
   z-index: 2;
 
-  @media (max-width: 1023px) {
-    margin-top: 10vh;
-  }
-  @media (max-width: 580px) {
-    margin-top: 8vh;
-  }
-  @media (max-width: 480px) {
-    margin-top: 2vh;
+
+  @media (min-width:$change-layout) {
+    bottom: 15%;
+    left: 15%;
   }
 
   h3 {
@@ -112,17 +110,13 @@
   }
 
   p {
-    width: 90%;
+    width: 85%;
     max-width: 540px;
+    margin-top: 16px;
 
-    font-size: clamp(22px, 6vw, 24px);
+    font-size: clamp(18px, 3vw, 21px);
     line-height: 1.35;
     color: $color-aquaGreen;
     color: $color-white;
-
-    @media (max-width: 580px) {
-      width: 80%;
-      font-size: clamp(10px, 6vw, 16px);
-    }
   }
 }
