--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -10,29 +10,35 @@
   margin: 5vh 0 0 0;
 
   @media (max-width: 580px) {
-    margin: 1vh 4vw 0 4vw;
-    width: 90%;
+    margin: 0;
   }
 
   img {
-    @media (max-width: 580px) {
-      transform: scale(.8);
-    }
-  }
-
-  button {
-    background-color: #ffffff00;
-    border: none;
-
-    &:hover {
-      cursor: pointer;
-    }
+    display: block;
+    width: 100%;
   }
 
   .burger {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    width: 60px;
+    height: 60px;
 
     @media (min-width: 780px) {
       display: none;
+    }
+
+    button {
+
+      svg {
+        width: 100%;
+        height: 100%;
+
+        path {
+          stroke: #fff;
+        }
+      }
     }
   }
 
@@ -48,4 +54,6 @@
 .logo {
   display: block;
   width: fit-content;
+  max-width: 80px;
+  margin-top: 8px;
 }
