--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -56,7 +56,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  border-radius: 32px;
+  border-radius: 24px;
   overflow: hidden;
 
   transition: .35s;
@@ -66,6 +66,18 @@
     width: 65vw;
     max-width: 960px;
     aspect-ratio: 16 / 10;
+    border-radius: 32px;
+  }
+
+  &::after {
+    display: block;
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 50%;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(0deg, rgba(238, 81, 47, .275), rgba(28, 55, 77, 0));
   }
 
   &:hover {
@@ -94,10 +106,10 @@
 
     p {
       position: absolute;
-      bottom: 20px;
-      left: 20px;
+      bottom: 24px;
+      left: 16px;
 
-      font-size: clamp(24px, 5vw, 45px);
+      font-size: clamp(32px, 5vw, 45px);
       font-weight: 900;
       letter-spacing: -0.02em;
       color: $color-white;
