--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -78,7 +78,7 @@
     bottom: 0;
     left: 0;
     transition: .35s;
-    background: linear-gradient(0deg, rgba(238, 81, 47, .275), rgba(28, 55, 77, 0));
+    background: linear-gradient(0deg, rgba(238, 81, 47, 0), rgba(28, 55, 77, 0));
   }
 
   &:hover {
@@ -86,12 +86,11 @@
     transition: .35s;
 
     &::after {
-      background: linear-gradient(0deg, rgba(238, 81, 47, 0), rgba(28, 55, 77, 0));
+      background: linear-gradient(0deg, rgba(238, 81, 47, .275), rgba(28, 55, 77, 0));
     }
 
     .name p {
-      // color: $color-white;
-      color: $color-orange;
+      color: $color-white;
     }
 
     >img {
@@ -125,7 +124,7 @@
       @media (min-width:$change-layout) {
         bottom: 40px;
         left: 40px;
-        // color: $color-orange;
+        color: $color-orange;
       }
     }
   }
