--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -27,11 +27,15 @@
 .modal__close {
   position: fixed;
   z-index: 9992;
-  top: 20px;
-  right: 20px;
+  top: 16px;
+  right: 16px;
   cursor: pointer;
+  width: 60px;
+  height: 60px;
 
   &:hover {
+    width: 100%;
+    height: 100%;
 
     .ui-close {
       // opacity: .5;
@@ -54,8 +58,8 @@
   justify-content: center;
   align-items: center;
   pointer-events: none;
-  width: 64px;
-  height: 64px;
+  width: 60px;
+  height: 60px;
   border-radius: 999px;
   border: 1px solid #ffffff55;
   transition: .35s;
