fix: fade titles, parallax work photos, hero parallax fix mobile

--- a/src/partials/sections/about.hbs
+++ b/src/partials/sections/about.hbs
@@ -2,7 +2,7 @@
  
   <div class="wrapper --flexbotm"> 
     <div class="section__slide">
-      <h3 class="section__h3">
+      <h3 class="section__h3 title">
         <span class="asterisk">*</span>Nice to</br >meet you.
       </h3>         
       <p class="section__p">
