--- a/src/partials/sections/hero.hbs
+++ b/src/partials/sections/hero.hbs
@@ -15,7 +15,7 @@
   </div> 
   {{!-- <!-- Videobackground on loop from Vimeo --> --}}
   <div class="videofull">
-    <div id="heroVideo" class="videofull__wrapper"></div>
+    <div id="heroVideo" class="videofull__wrapper parallax"></div>
   </div>
   <script src="https://player.vimeo.com/api/player.js"></script>
   <script>
