--- a/src/partials/sections/intro.hbs
+++ b/src/partials/sections/intro.hbs
@@ -2,7 +2,7 @@
   <div class="wrapper">
 
     <div class="section__slide">
-      <h3 class="section__h3 title-intro">
+      <h3 class="section__h3 title title-intro">
         {{!-- <span class="asterisk">*</span><span>This is our word </span><span>for epiphany.</span><span>We had one and</span>
         <span>that&#8217;s why we&#8217;re here…</span> --}}
         <span class="asterisk">*</span>This is our word<br />for epiphany.<br />We had one and<br />
@@ -11,7 +11,7 @@
     </div>
 
     <div class="section__slide">
-      <h3 class="section__h3 title-second">
+      <h3 class="section__h3 title title-second">
         {{!-- <span>There&#8217;s a</span><span>shortcut to</span><span>greatness.</span> --}}
         There&#8217;s a<br />shortcut to<br />greatness.
       </h3>
