--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -4,7 +4,7 @@
     <div class="contact__info">
       
       <div class="contact__phrase">
-        <p class="contact-title">
+        <p class="contact-title title">
           <span class="asterisk">*</span>Wanna </br >chat?
         </p>
       </div>
