--- a/src/partials/sections/how.hbs
+++ b/src/partials/sections/how.hbs
@@ -3,14 +3,14 @@
 
     <!-- Slide Intro -->
     <div class="section__slide">
-      <h3 class="section__h3">
+      <h3 class="section__h3 title">
         <span class="asterisk">*</span>Here’s how </br > we roll.</span>
       </h3>
     </div> 
 
     <!-- Slide 1 -->
     <div class="section__slide">
-      <h3 class="section__h3"> 
+      <h3 class="section__h3 title"> 
         Serious</br >strategery
       </h3>
       <p class="section__p">
@@ -22,7 +22,7 @@
 
     <!-- Slide 2 -->
     <div class="section__slide">
-      <h3 class="section__h3"> 
+      <h3 class="section__h3 title"> 
         Hot hot</br >hot ideas
       </h3>
       <p class="section__p">
@@ -35,7 +35,7 @@
 
     <!-- Slide 3 -->
     <div class="section__slide">
-      <h3 class="section__h3"> 
+      <h3 class="section__h3 title"> 
         Pressure-cooked</br >production
       </h3>
       <p class="section__p">
