--- a/src/partials/sections/work.hbs
+++ b/src/partials/sections/work.hbs
@@ -2,7 +2,7 @@
 
   <div class="wrapper --flexbotm">
     <div class="section__slide">
-      <h3 class="section__h3">
+      <h3 class="section__h3 title">
         <span class="asterisk">*</span>See what </br > we do.
       </h3>
     </div>
@@ -15,7 +15,7 @@
         <div class="name">
           <p>*Meijer</p>
         </div>
-        <img src="./meijer/ice-cream.jpg" alt="Meijer">
+        <img class="parallax" src="./meijer/ice-cream.jpg" alt="Meijer">
       </div>
     </div>
 
@@ -24,7 +24,7 @@
         <div class="name">
           <p>*Frederik’s</p>
         </div>
-        <img src="./frederiks/pasta.jpg" alt="Frederik’s">
+        <img class="parallax" src="./frederiks/pasta.jpg" alt="Frederik’s">
       </div>
     </div>
 
@@ -33,7 +33,7 @@
         <div class="name">
           <p>*Dole Wiggles</p>
         </div>
-        <img src="./dole/wiggles/dance.jpg" alt="Dole Wiggles">
+        <img class="parallax" src="./dole/wiggles/dance.jpg" alt="Dole Wiggles">
       </div>
     </div>
 
@@ -42,7 +42,7 @@
         <div class="name">
           <p>*Fresh Thyme</p>
         </div>
-        <img src="./fresh-thyme/get-real-steak.jpg" alt="Fresh Thyme">
+        <img class="parallax" src="./fresh-thyme/get-real-steak.jpg" alt="Fresh Thyme">
       </div>
     </div>
 
@@ -51,7 +51,7 @@
         <div class="name">
           <p>*buybuyBABY</p>
         </div>
-        <img src="./buybuybaby/manifesto.jpg" alt="buybuyBABY">
+        <img class="parallax" src="./buybuybaby/manifesto.jpg" alt="buybuyBABY">
       </div>
     </div>
 
@@ -60,7 +60,7 @@
         <div class="name">
           <p>*Dole Juice</p>
         </div>
-        <img src="./dole/juice/rebecca.jpg" alt="Dole Juice">
+        <img class="parallax" src="./dole/juice/rebecca.jpg" alt="Dole Juice">
       </div>
     </div>
     
