--- a/src/scss/_videofull.scss
+++ b/src/scss/_videofull.scss
@@ -31,7 +31,9 @@
 
 @media(max-aspect-ratio: 16 / 9) {
   .videofull__wrapper {
+    height: 150%;
     width: 400%;
+    top: -30%;
     left: -150%
   }
 }
