--- a/src/scss/_videofull.scss
+++ b/src/scss/_videofull.scss
@@ -31,7 +31,7 @@
 
 @media(max-aspect-ratio: 16 / 9) {
   .videofull__wrapper {
-    height: 300%;
+    height: 100dvh;
     width: 400%;
     top: -125%;
     left: -150%
