--- a/src/scss/_videofull.scss
+++ b/src/scss/_videofull.scss
@@ -9,6 +9,22 @@
   pointer-events: none;
 }
 
+.hide {
+  opacity: 0;
+}
+.show {
+  animation: videoEnters 2s forwards;
+}
+
+@keyframes videoEnters {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .videofull__wrapper,
 .videofull__wrapper iframe {
   position: absolute;
