--- a/src/partials/sections/hero.hbs
+++ b/src/partials/sections/hero.hbs
@@ -34,10 +34,10 @@
     // Checks that video loaded in buffer
     heroPlayer.on('bufferend', function(){
       // console.log("loaded");
-      document.querySelector(".videofull").classList.remove("hide")
-      document.querySelector(".videofull").classList.add("show")
-      document.querySelector(".red-cover").classList.add("cover-out")
-    })
+      document.querySelector(".videofull").classList.remove("hide");
+      document.querySelector(".videofull").classList.add("show");
+      document.querySelector(".red-cover").classList.add("cover-out");
+    });
   </script> 
 
 </section>
