fix: header burguer anim onload

--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -8,7 +8,7 @@
   </div>
 
   <div class="burger">
-    <button class="button">
+    <button class="button burguer-btn">
       <svg width="74" height="74" viewBox="0 0 74 74" fill="none">
         <path
           d="M26.7188 28.9976H46.7188"
