fix: hero cover time and ease

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -44,7 +44,7 @@
   }
 
   .cover-out {
-    animation: coverOut 2s forwards;
+    animation: coverOut 1s ease-out forwards;
   }
 
   @keyframes coverOut {
