--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -44,7 +44,7 @@
   }
 
   .cover-out {
-    animation: coverOut 1s ease-in forwards;
+    animation: coverOut 1.5s ease-out forwards;
   }
 
   @keyframes coverOut {
