Container blend mode

--- a/src/partials/sections/about.hbs
+++ b/src/partials/sections/about.hbs
@@ -27,7 +27,7 @@
           work in CPG and retail.
         </p> 
       </div>
-      <picture><img class="bio-pic" src="./team/kris.jpg" alt="Kristi" /></picture>
+      <div class="team__pic"><div class="team__blend"><img class="bio-pic" src="./team/kris.jpg" alt="Kristi" /></div></div>
     </div>
     
     {{!-- Phil --}}
@@ -40,7 +40,7 @@
           brands, at the best agencies in Chicago and NYC.
         </p> 
       </div>
-      <picture><img class="bio-pic" src="./team/phil.jpg" alt="Phil" /> </picture>
+      <div class="team__pic"><div class="team__blend"><img class="bio-pic" src="./team/phil.jpg" alt="Phil" /></div></div>
     </div>
   </div>
 </section>
