--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -44,7 +44,7 @@
 
   width: 100vw;
   //height: clamp(435px, 45vh, 500px);
-  
+
   width: 100vw;
   padding-bottom: 20vw;
 
@@ -62,13 +62,14 @@
     }
   }
 
+
+  .team__pic,
   picture {
     display: block;
     width: 100%;
     opacity: 0.85;
     z-index: 1;
 
-    background: $color-lightBlue;
     border-radius: 0 100vh 100vh 0;
 
     object-fit: cover;
@@ -85,12 +86,18 @@
     }
   }
 
+  .team__blend {
+
+    aspect-ratio: 3/2;
+    background: $color-lightBlue;
+  }
+
   img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 0 100vh 100vh 0;
+    // border-radius: 0 100vh 100vh 0;
     mix-blend-mode: multiply;
 
     @media (min-width:$change-layout) {
