style: work card hover animation

--- a/src/partials/works/buybuybaby.hbs
+++ b/src/partials/works/buybuybaby.hbs
@@ -6,8 +6,10 @@
         <video controls poster="./buybuybaby/manifesto.jpg">
           <source
             src="https://player.vimeo.com/progressive_redirect/playback/892010823/rendition/1080p/file.mp4?loc=external&signature=a7224e060ebdf8d4c2259c34ead5399cf14f45d3c0a5d8e403b241ac4df41be7"
-            type="video/mp4" />
+            type="video/mp4" 
+          />
         </video>
+        
       </div>
     </swiper-slide>
   
