fix>: vimeo imbed

--- a/src/partials/works/buybuybaby.hbs
+++ b/src/partials/works/buybuybaby.hbs
@@ -3,15 +3,25 @@
     mousewheel="true" keyboard="true" space-between="30" pagination-dynamic-bullets="true">
     <swiper-slide>
       <div class="card">
-        <video controls poster="./buybuybaby/manifesto.jpg">
-          <source
-            src="https://player.vimeo.com/progressive_redirect/playback/892010823/rendition/1080p/file.mp4?loc=external&signature=a7224e060ebdf8d4c2259c34ead5399cf14f45d3c0a5d8e403b241ac4df41be7"
-            type="video/mp4" 
-          />
-        </video>
-        
+        <div id="buy-baby">
+        </div>
       </div>
     </swiper-slide>
+
+    <script src="https://player.vimeo.com/api/player.js"></script>
+    <script>
+      const babyPlayerOptions = {
+        id: 892010823, 
+        autoplay: false,
+        autopause: false,
+        background: false,
+        controls: true,
+        loop: false,
+        muted: false,
+        quality: 'auto'
+      };
+      const byeBabyPlayer = new Vimeo.Player('buy-baby', babyPlayerOptions);
+    </script> 
   
   </swiper-container>
 </div>
