--- a/src/scss/_swiper.scss
+++ b/src/scss/_swiper.scss
@@ -55,9 +55,9 @@ swiper-slide.slide-img {
 
 .card {
   position: relative;
-  width: 100vw;
+  width: 100%;
 
-  video {
+  iframe {
     display: block;
     overflow: hidden;
     border-radius: 24px;
